--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node-fetch": "^2.6.0"
   },
   "devDependencies": {
+    "@types/googlemaps": "^3.39.11",
     "typescript": "^3.9.7"
   }
 }
